force-app/main/default/objects/Student__c/fields/Mail_id__c.field-meta.xml
<CustomField>
    <fullName>Mail_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Mail id</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>