force-app/main/default/objects/Student__c/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark</label>
    <type>Checkbox</type>
</CustomField>