force-app/main/default/objects/Student__c/fields/Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Phone_no__c</fullName>
    <label>Phone no.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>