force-app/main/default/objects/Student__c/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <displayFormat>Reg-{0000}</displayFormat>
    <label>Registration No.</label>
    <type>AutoNumber</type>
</CustomField>